--- a/hexagonal_lattice.ipynb
+++ b/hexagonal_lattice.ipynb
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "# plot hexagonal latticie showing point\n",
+    "# plot hexagonal lattice showing point\n",
     "def pltcolor(x, y):\n",
     "    cols = []\n",
     "    for i in range(number_of_sites):\n",
@@ -262,7 +262,7 @@
     "# Boltzmann constant\n",
     "kB = 8.617332e-5\n",
     "kT = kB * T\n",
-    "\n",
+    "# going through all sites\n",
     "for i in range(number_of_sites):\n",
     "    a = i \n",
     "    print(a)\n",
